--- a/index.html
+++ b/index.html
@@ -70,34 +70,34 @@
     </div>
   </div>
 
-  <div class="container bg-light">
-    <div class="row">
-      <div class="col-6">
-        <div class="row mb-4">
-          <div class="col-12 col-lg-6 mb-4 mb-lg-0">
-            <img src="./img/300x300.png" class="img-fluid rounded-circle" alt="">
-          </div>
-          <div class="col-12 col-lg-6">
-            <h4 class="h4">What we do</h4>
-            <p class="blockquote text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis autem id quisquam, ipsam repellendus nisi expedita corporis obcaecati nulla veritatis in fugiat ut excepturi quidem fugit est veniam laboriosam. Quibusdam, temporibus delectus? Nihil, quae eligendi.</p>
-            <button type="button" class="btn btn-primary me-3 btn-lg">Read more</button>
-          </div>
-        </div>
-      </div>
-      
-      <div class="col-6">
-        <div class="row mb-4">
-          <div class="col-12 col-lg-6 mb-4 mb-lg-0">
-            <img src="./img/300x300.png" class="img-fluid rounded-circle" alt="">
-          </div>
-          <div class="col-12 col-lg-6">
-            <h4 class="h4">What we do</h4>
-            <p class="blockquote text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis autem id quisquam, ipsam repellendus nisi expedita corporis obcaecati nulla veritatis in fugiat ut excepturi quidem fugit est veniam laboriosam. Quibusdam, temporibus delectus? Nihil, quae eligendi.</p>
-            <button type="button" class="btn btn-primary me-3 btn-lg">Read more</button>
-          </div>
-        </div>
-      </div>
-    </div>
+<div class="container bg-light"> 
+    <div class="row"> 
+      <div class="col-12 col-md-6 mb-4"> 
+        <div class="row mb-4"> 
+          <div class="col-12 col-lg-6 mb-4 mb-lg-0"> 
+            <img src="./img/300x300.png" class="img-fluid rounded-circle" alt=""> 
+          </div> 
+          <div class="col-12 col-lg-6"> 
+            <h4 class="h4">What we do</h4> 
+            <p class="blockquote text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis autem id quisquam, ipsam repellendus nisi expedita corporis obcaecati nulla veritatis in fugiat ut excepturi quidem fugit est veniam laboriosam. Quibusdam, temporibus delectus? Nihil, quae eligendi.</p> 
+            <button type="button" class="btn btn-primary me-3 btn-lg">Read more</button> 
+          </div> 
+        </div> 
+      </div> 
+       
+      <div class="col-12 col-md-6 mb-4"> 
+        <div class="row mb-4"> 
+          <div class="col-12 col-lg-6 mb-4 mb-lg-0"> 
+            <img src="./img/300x300.png" class="img-fluid rounded-circle" alt=""> 
+          </div> 
+          <div class="col-12 col-lg-6"> 
+            <h4 class="h4">What we do</h4> 
+            <p class="blockquote text-muted">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis autem id quisquam, ipsam repellendus nisi expedita corporis obcaecati nulla veritatis in fugiat ut excepturi quidem fugit est veniam laboriosam. Quibusdam, temporibus delectus? Nihil, quae eligendi.</p> 
+            <button type="button" class="btn btn-primary me-3 btn-lg">Read more</button> 
+          </div> 
+        </div> 
+      </div> 
+    </div> 
   </div>
   
   <div class="container">
